test/conformance/chainsaw/validate/clusterpolicy/standard/audit-deprecated/background-vars-serviceAccountName/manifests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: background-vars-serviceaccountname
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: ns-vars-serviceaccountname
    match:
      any:
      - resources:
          kinds:
            - Pod
    validate:
      message: The `owner` label is required for all Namespaces.
      pattern:
        metadata:
          labels:
            baz: "{{serviceAccountName}}"
