test/conformance/chainsaw/validate/clusterpolicy/standard/audit-deprecated/background-vars-serviceAccountName/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: background-vars-serviceaccountname
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - script:
        content: kubectl apply -f manifests.yaml
        check:
          # This check below ensures that the string 'variable {{serviceAccountName}} is not allowed' is found in stderr or else fails
          (contains($stderr, 'variable {{serviceAccountName}} is not allowed')): true
  - name: step-02
    try:
    - error:
        file: chainsaw-step-02-error-1-1.yaml
